--- a/content/resources/24962assign2.md
+++ b/content/resources/24962assign2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Problems on analysis of Sanskrit desiderative reduplication.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/24-962-advanced-phonology-spring-2005/bec6d7c8991ed04bb13805245f171592_24962assign2.pdf
 file_type: application/pdf
+parent_uid: a29922a1-7ac8-0f6e-f4d7-d7d1b79f14bc
 resourcetype: Document
 title: 24962assign2.pdf
 uid: bec6d7c8-991e-d04b-b138-05245f171592
